# dep-file-cmake

./: CMakeLists.txt  Kconfig  fixdep.py  main.c  test.h  unrelated.c
cmake/: kconfig.cmake
scripts/kconfig/: kconfig.py  kconfiglib.py  randconfig.py
